# libbmp

./: .gitignore  CMakeLists.txt  build.sh
src/: CMakeLists.txt  bitmap.c  bitmap.h  bmp.c  bmp.h  debug.c  debug.h  dumper.c  file_io.c
test/: CMakeLists.txt  test_bmp.c  test_file_io.c  test_main.c  test_main.h
